--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
             "dev": "vite",
             "build": "vite build",
             "predeploy":"npm run build",
-            "deploy":"gh-pages -d dist"
+            "deploy":"gh-pages -d dist",
+            "preview": "vite preview"
       }
 }
